--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,18 +1,71 @@
 <!doctype html>
 <html lang="fr">
-  <head>
-      {% block head %}
-      <meta charset="UTF-8">
-      <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
-      <title>{% block title %}{% endblock %} - My Webpage</title>
-      {% endblock %}
-  </head>
-  <body>
-    <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
-        {% block footer %}
-        &copy; Copyright 2010 by <a href="http://domain.invalid/">you</a>.
-        {% endblock %}
+<head>
+    {% block head %}
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet">
+    <title>Camille Clarret</title>
+    {% endblock %}
+</head>
+<body>
+<header>
+    <div class="container-fluid">
+        <div class="row">
+            <nav class="col navbar navbar-expand-sm bg-secondary navbar-dark">
+                <a class="navbar-brand" href="/">Camille Clarret</a>
+                <button class="navbar-toggler" data-target="#navbarContent" data-toggle="collapse" type="button">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/CamClrt" target="_blank">🐈‍ GitHub</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.linkedin.com/in/camille-clarret-6044548b/"
+                               target="_blank">👥 Linkedin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" target="_blank">📄 CV</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mailto:camille.clarret@gmail.com" target="_blank">📩 Mail</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
-  </body>
+</header>
+<div id="content">{% block content %}{% endblock %}</div>
+<footer>
+    <div class="bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <ul class="list-inline text-center font-weight-light mt-3">
+                        <li class="list-inline-item">&middot;</li>
+                        <li class="list-inline-item">Septembre 2022</li>
+                        <li class="list-inline-item">&middot;</li>
+                        </br>
+                        <li class="list-inline-item"><a href="https://github.com/CamClrt/camclrt_flask_project" target="_blank">Sources
+                            & hébergement</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script crossorigin="anonymous"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 </html>
