--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,106 @@
 {% extends "layout.html" %}
-{% block title %}Index{% endblock %}
-{% block head %}
-  {{ super() }}
-  <style type="text/css">
-    .important { color: #336699; }
-  </style>
-{% endblock %}
 {% block content %}
-  <h1>Index</h1>
-  <p class="important">
-    Welcome on my awesome homepage.
+<section>
+    <!-- home picture -->
+    <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="container-fluid py-5">
+            <h2 class="text-center">French Python Developer 🐍</h2>
+            <h4 class="text-center">• <span style="color: #714B67;">Odoo</span> and <span
+                    style="color: #177751;">Django</span> enthusiast •</h4>
+            <h5 class="text-center">Occasional blog writer</h5>
+        </div>
+    </div>
+
+    <!-- cards projets -->
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-12 col-lg-4">
+                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
+                    <img alt="illustration" class="card-img-top" src="#">
+                    <div class="card-body">
+                        <span class="badge bg-success mb-3">Projet personnel</span>
+                        <h6 class="card-title text-center">Blog Personnel</h6><br>
+                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
+                           role="button" target="_blank">Lien</a>
+                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
+                           role="button" target="_blank">Sources et hébergement</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-4">
+                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
+                    <img alt="illustration" class="card-img-top" src="#">
+                    <div class="card-body">
+                        <span class="badge bg-success mb-3">Projet personnel</span>
+                        <h6 class="card-title text-center">Blog Personnel</h6><br>
+                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
+                           role="button" target="_blank">Lien</a>
+                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
+                           role="button" target="_blank">Sources et hébergement</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-4">
+                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
+                    <img alt="illustration" class="card-img-top" src="#">
+                    <div class="card-body">
+                        <span class="badge bg-success mb-3">Projet personnel</span>
+                        <h6 class="card-title text-center">Blog Personnel</h6><br>
+                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
+                           role="button" target="_blank">Lien</a>
+                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
+                           role="button" target="_blank">Sources et hébergement</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-4">
+                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
+                    <img alt="illustration" class="card-img-top" src="#">
+                    <div class="card-body">
+                        <span class="badge bg-success mb-3">Projet personnel</span>
+                        <h6 class="card-title text-center">Blog Personnel</h6><br>
+                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
+                           role="button" target="_blank">Lien</a>
+                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
+                           role="button" target="_blank">Sources et hébergement</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-4">
+                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
+                    <img alt="illustration" class="card-img-top" src="#">
+                    <div class="card-body">
+                        <span class="badge bg-success mb-3">Projet personnel</span>
+                        <h6 class="card-title text-center">Blog Personnel</h6><br>
+                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
+                           role="button" target="_blank">Lien</a>
+                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
+                           role="button" target="_blank">Sources et hébergement</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-4">
+                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
+                    <img alt="illustration" class="card-img-top" src="#">
+                    <div class="card-body">
+                        <span class="badge bg-success mb-3">Projet personnel</span>
+                        <h6 class="card-title text-center">Blog Personnel</h6><br>
+                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
+                           role="button" target="_blank">Lien</a>
+                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
+                           role="button" target="_blank">Sources et hébergement</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
 {% endblock %}
