imp content to layout + index templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
             <div class="col-12 col-lg-4">
                 <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="#">
+                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
                     <div class="card-body">
                         <span class="badge bg-success mb-3">Projet personnel</span>
                         <h6 class="card-title text-center">Blog Personnel</h6><br>
@@ -32,7 +32,7 @@
 
             <div class="col-12 col-lg-4">
                 <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="#">
+                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
                     <div class="card-body">
                         <span class="badge bg-success mb-3">Projet personnel</span>
                         <h6 class="card-title text-center">Blog Personnel</h6><br>
@@ -46,7 +46,7 @@
 
             <div class="col-12 col-lg-4">
                 <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="#">
+                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
                     <div class="card-body">
                         <span class="badge bg-success mb-3">Projet personnel</span>
                         <h6 class="card-title text-center">Blog Personnel</h6><br>
@@ -60,7 +60,7 @@
 
             <div class="col-12 col-lg-4">
                 <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="#">
+                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
                     <div class="card-body">
                         <span class="badge bg-success mb-3">Projet personnel</span>
                         <h6 class="card-title text-center">Blog Personnel</h6><br>
@@ -74,7 +74,7 @@
 
             <div class="col-12 col-lg-4">
                 <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="#">
+                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
                     <div class="card-body">
                         <span class="badge bg-success mb-3">Projet personnel</span>
                         <h6 class="card-title text-center">Blog Personnel</h6><br>
@@ -88,7 +88,7 @@
 
             <div class="col-12 col-lg-4">
                 <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="#">
+                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
                     <div class="card-body">
                         <span class="badge bg-success mb-3">Projet personnel</span>
                         <h6 class="card-title text-center">Blog Personnel</h6><br>
