--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
                                target="_blank">👥 Linkedin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" target="_blank">📄 CV</a>
+                            <a class="nav-link" href=camille_clarret_cv.pdf" target="_blank">📄 CV</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="mailto:camille.clarret@gmail.com" target="_blank">📩 Mail</a>
