--- a/templates/index.html
+++ b/templates/index.html
@@ -18,84 +18,14 @@
 
             <div class="col-12 col-lg-4">
                 <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
+                    <img alt="illustration" class="card-img-top" src="static/img/{{ res.img }}">
                     <div class="card-body">
-                        <span class="badge bg-success mb-3">Projet personnel</span>
-                        <h6 class="card-title text-center">Blog Personnel</h6><br>
-                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
-                           role="button" target="_blank">Lien</a>
-                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
-                           role="button" target="_blank">Sources et hébergement</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-lg-4">
-                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
-                    <div class="card-body">
-                        <span class="badge bg-success mb-3">Projet personnel</span>
-                        <h6 class="card-title text-center">Blog Personnel</h6><br>
-                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
-                           role="button" target="_blank">Lien</a>
-                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
-                           role="button" target="_blank">Sources et hébergement</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-lg-4">
-                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
-                    <div class="card-body">
-                        <span class="badge bg-success mb-3">Projet personnel</span>
-                        <h6 class="card-title text-center">Blog Personnel</h6><br>
-                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
-                           role="button" target="_blank">Lien</a>
-                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
-                           role="button" target="_blank">Sources et hébergement</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-lg-4">
-                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
-                    <div class="card-body">
-                        <span class="badge bg-success mb-3">Projet personnel</span>
-                        <h6 class="card-title text-center">Blog Personnel</h6><br>
-                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
-                           role="button" target="_blank">Lien</a>
-                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
-                           role="button" target="_blank">Sources et hébergement</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-lg-4">
-                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
-                    <div class="card-body">
-                        <span class="badge bg-success mb-3">Projet personnel</span>
-                        <h6 class="card-title text-center">Blog Personnel</h6><br>
-                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
-                           role="button" target="_blank">Lien</a>
-                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
-                           role="button" target="_blank">Sources et hébergement</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-lg-4">
-                <div class="card mx-1 my-3 shadow p-3 mb-5 bg-white rounded">
-                    <img alt="illustration" class="card-img-top" src="static/img/et_puy_c_est_tout.png">
-                    <div class="card-body">
-                        <span class="badge bg-success mb-3">Projet personnel</span>
-                        <h6 class="card-title text-center">Blog Personnel</h6><br>
-                        <a class="btn btn-outline-primary" href="https://www.et-puy-c-est-tout.fr"
-                           role="button" target="_blank">Lien</a>
-                        <a class="btn btn-outline-secondary" href="https://github.com/CamClrt/et-Puy-c-est-tout"
-                           role="button" target="_blank">Sources et hébergement</a>
+                        <span class="badge bg-success mb-3">{{ res.title }}</span>
+                        <h6 class="card-title text-center">{{ res.tag }}</h6><br>
+                        <a class="btn btn-outline-primary" href="{{ res.btn1_url }}"
+                           role="button" target="_blank">{{ res.btn1_name }}</a>
+                        <a class="btn btn-outline-secondary" href="{{ res.btn2_url }}"
+                           role="button" target="_blank">{{ res.btn2_name }}</a>
                     </div>
                 </div>
             </div>
